[project]
name = "dryft"
version = "0.1.0"
description = "Package for take-home Dryft assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "numpy==1.26.0",
    "wheel>=0.45.1",
    "pip>=24.3.1",
    "openai>=1.55.3",
]

[tool.basedpyright]
include = ["dryft"]
